--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,17 +7,18 @@
 </head>
 <body class="bg-light">
 
-  <!-- 🔗 Навігація -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Система</a>
-      <div class="navbar-nav">
-        <a class="nav-link" href="/upload">Завантаження</a>
-        <a class="nav-link" href="/results">Результати</a>
-        <a class="nav-link" href="/gmm">GMM</a>
-      </div>
+<!-- 🔗 Навігація -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Система</a>
+    <div class="navbar-nav">
+      <a class="nav-link" href="/upload">Завантаження</a>
+      <a class="nav-link" href="/results">Результати</a>
+      <a class="nav-link" href="/gmm">GMM</a>
+     <!-- <a class="nav-link" href="/saved_models">Моделі</a>  -->
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- 📦 Контент сторінки -->
   <div class="container mt-4">
